# i3blocks-volume-pw

./: Cargo.toml  README.md
src/: lib.rs  main.rs  protocol.rs
tests/: active.txt  bluetooth.txt  bluetoothctl_info.txt  click.json  full_output.json  headphones.txt  headphones_unplugged.txt  inactive.txt
